--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ nb-configuration.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/JavaApplication2/nbproject/private/
+/mavenproject1/target/
